Working Simulator View

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,11 +7,11 @@ body {
     font-size: 100%;
 }
 
-.disconnected {
+.offline {
     color:violet
 }
 
-.connecting {
+.online {
     color:yellow
 }
 
@@ -36,16 +36,13 @@ body {
     height: 100px;
 }
 
-.parm-lg {
-    font-size: 4em;
+.parameter-large {
+    font-size: 90px;
+    line-height: 1;
 }
 
-.parm-sm {
-    font-size: 1em
-}
-
-.parm-md {
-    font-size: 4em
+.parameter-small {
+    font-size: 20px
 }
 
 .trigger-button {
